2002-07-04  Ross Burton  <ross@burtonini.com>

	* gnotravex.c: When the game is paused, hide the numbers so the
	player cannot cheat. (closes #85476)
	
2002-06-03  Ross Burton  <ross@burtonini.com>

	* gnotravex.c: Load pixmaps from the application path, instead of
	the system (fixes #83917). Also set the about dialog to be a
	transient for the parent window.

2002-06-03  Bastien Nocera  <hadess@hadess.net>

	* gnotravex.c: (about_cb): add icon to the about dialog

2002-05-05  Chris Lyttle <chris@wilddev.net>

	* help/C/Makefile.am: updated for new format of SK 0.3.8.
	* help/C/gnotravex-C.omf: updated for new format of SK 0.3.8.
	
2002-04-15  Bastien Nocera  <hadess@hadess.net>

	* gnotravex.c: (save_state): remove nstr(), patch from
	r_kinder@yahoo.com (Richard Kinder)

2002-02-17  Chris Lyttle  <chris@wilddev.net>

	* help/C/gnotravex.xml: updated for new template.
	* help/C/Makefile.am:  added legal.xml
	* help/C/legal.xml:  added to comply with new template

2002-02-14  Chris Lyttle    <chris@wilddev.net>

	* help/C/gnotravex.xml : move to XML.

	* help/C/gnotravex-C.omf : move to XML.

	* help/C/gnotravex.sgml : deleted, move to XML.

	* help/C/Makefile.am : move to XML.

2002-02-02  Zbigniew Chyla  <cyba@gnome.pl>

	* gnotravex.c (about_cb): Don't try to translate empty string.

2002-01-20  Juan Pablo Mendoza <jpablo@gnome.org>

	Patch from Andreas Simon <yuipx@web.de>

	gnotravex.c: Remove some deprecated functions and
	reduce flickering when changuing board size.

2002-01-03  Josh Barrow  <drleary@mac.com>

	* Makefile.am:
	* gnotravex.c: (main), (create_window), (create_space):

2001-12-31  Josh Barrow  <drleary@mac.com>

	* gnotravex.c: (expose_space), (gui_draw_pixmap), (setup_mover),
	(create_space), (create_mover), (load_image), (get_bg_color),
	(make_buffer), (quit_game_cb), (nstr):
	Changed to not use deprecated functions.

2001-12-23  Mark McLoughlin  <mark@skynet.ie>

	* gnotravex.c: port from GtkClock to GamesClock.

	* Makefile.am: upd.
